# teal

./: .gitignore  CMakeLists.txt  README.md  SConstruct  run_build.py
libs/includes/glad/: glad.h
src/: SConscript  cmdParser.cpp  cmdParser.h  glad.c  main.cpp  test.h
src/cmd/: cmd.h  help.cpp  help.h
src/framework/api/: entityApi.h  renderApi.h  sceneApi.h
src/framework/components/: sprite.cpp  sprite.h
src/framework/core/: component.h  displayManager.cpp  displayManager.h  entity.cpp  entity.h  game.cpp  game.h  scene.cpp  scene.h
src/framework/core/managers/: displayManager.cpp  displayManager.h  sceneManager.cpp  sceneManager.h
src/framework/data/: color.h  rectangle.h  uuid.h
src/framework/graphics/: graphicDevice.cpp  graphicDevice.h  graphicsDevice.cpp  graphicsDevice.h  renderer.cpp  renderer.h  spriteBatcher.cpp  spriteBatcher.h  texture.cpp  texture.h
src/framework/graphics/sprites/: batchItem.cpp  batchItem.h  spriteBatch.cpp  spriteBatch.h  spriteBatcher.cpp  spriteBatcher.h
src/framework/graphics/vertices/: vertex.cpp  vertex.h
src/framework/interfaces/: IDisposable.h  ITransform.cpp  ITransform.h
src/framework/managers/: displayManager.cpp  displayManager.h  sceneManager.cpp  sceneManager.h
src/framework/utils/: logger.cpp  logger.h  math.h
src/game/: test.cpp  test.h
src/game/core/: game.cpp  game.h
src/game/entities/: testEntity.h
src/game/scenes/: mainScene.cpp  mainScene.h
src/utils/: logger.h
